# micropad

./: .dockerignore  .env.example  Dockerfile  INSTALL.md  LICENSE  README.md  batch_analyze.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_scanner.py  setup.py
config/patterns/: 3rd_party_registration.yaml  multiple_service_instances_per_host.yaml  server-side_service_discovery.yaml  service_deployment_platform.yaml  service_instance_per_container.yaml  service_instance_per_vm.yaml  service_mesh.yaml  single_service_instance_per_host.yaml
examples/: README.md  sample_output.json  sample_pattern.yaml
experiment_data/: ground_truth.json  metadata.json  repos.txt  statistics.txt  survey_responses_anonymized.csv
experiment_data/microref/: pattern_input.csv  requirements.txt
experiment_data/microref/synthetic_examples/: example_collector_output.jsonl
experiment_data/paper_evidence/detection_results/: .gitkeep  0x2142_frigate-notify_8c71f0e8.json  1Solon_Home-Server-Configuration_5f9df56a.json  ADOdb_ADOdb_90ee4de3.json  Abhinandan-Kushwaha_react-native-gifted-charts_936e27cc.json  AprilRobotics_apriltag_6220de6e.json  Cantara_xorcery_cc2e954d.json  Cleanuparr_Cleanuparr_9c667c31.json  CloudCannon_rosey_cb2716b2.json  Comfy-Org_registry-web_654fa9f3.json  DavidHDev_react-bits_d005ac84.json  DeepMIMO_DeepMIMO_d79be8ee.json  Delgan_loguru_d25bc540.json  DrKJeff16_project.nvim_63959104.json  EWSoftware_SHFB_03858f1d.json  EarthyScience_Browzarr_011b60a2.json  FinalForEach_Cosmic-Reach-Localization_da80e5da.json  FlexMeasures_flexmeasures_4a939751.json  ForNeVeR_AvaloniaRider_688a0f79.json  Freika_dawarich_bc573d79.json  Frolic-chat_Frolic_fe2692d3.json  GPUOpen-LibrariesAndSDKs_VulkanMemoryAllocator_73192190.json  Giveth_impact-graph_c9087bf3.json  GoogleCloudPlatform_accelerated-platforms_7daef50e.json  HKUDS_LightRAG_f4be6c7d.json  HiDiHo01_Buienalarm_4152838d.json  HuLaSpark_HuLa_3e5d56ad.json  Hydepwns_raxol_4b749e32.json  IAS-Astrophysics_athenak_ebc184e6.json  ImranR98_Obtainium_787f203c.json  JaKooLit_NixOS-Hyprland_5ee7b9ee.json  KDE_kde-linux_18c1a277.json  KevinnZou_compose-webview-multiplatform_122baaab.json  Koishi-Satori_EirinFixed_c0dad535.json  LukeGus_Termix_392a43ab.json  MCSManager_MCSManager_bbd50d4f.json  MIT-SPARK_config_utilities_b06afeb5.json  MewPurPur_GodSVG_f2145c37.json  MindfulLearner_dima-portfolio_2000263a.json  MultiMote_niimblue_fd2c00bb.json  (+152 more)
notebooks/: stats_icsa_paper.ipynb
notebooks/analysis_output/: analysis_report.txt
notebooks/paper_tables/: f1_vs_fdi_comparison.csv  f1_vs_prevalence_comparison.csv  file_dominance_index.csv  metric_evolution.csv  outlier_analysis.csv  overall_metrics.csv  pattern_file_extensions.csv  pattern_top_filenames_detected.csv  per_pattern_file_statistics.csv  per_pattern_metrics.csv  per_repository_detection_effectiveness.csv  per_repository_pattern_details.json  repository_file_analysis.csv  survey_completion_rates.csv  survey_countries.csv  survey_experience.csv  survey_microservice_knowledge.csv  survey_ms_develop.csv  survey_repository_knowledge.csv
src/micropad/: __init__.py
src/micropad/analysis/: __init__.py  pattern_analyzer.py
src/micropad/config/: __init__.py  settings.py
src/micropad/core/: __init__.py  cost_tracking.py  scanner.py
src/micropad/data/: __init__.py  metrics.py  preparation.py  statistics.py  utils.py
src/micropad/llm/: __init__.py  agent.py  client.py  helpers.py  prompts.py
src/micropad/logging/: __init__.py  detection.py  manager.py  ui.py
src/micropad/reporting/: __init__.py  generator.py
src/micropad/repository/: __init__.py  code_parsers.py  graph.py  parser.py
src/micropad/scripts/: clone_repos.py  seed_database.py  (+1 more)
src/microref/: __init__.py  collector.py  constants.py  csv_deduplicator.py  downloader.py  filter.py  generate_csv.py  logger.py  pattern_catalog.py  pattern_generator.py  repository.py  tokens.py
target_repo/: .gitkeep
target_repo/sample_repo/: deployment.yaml  docker-compose.yml
(+9 files in other folders)
